--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -12,11 +12,12 @@
             {{PostImg}}
             <p>{{Text}}</p>
         </div>
+        <comments id="Comment">{{Comments}}</comments>
         <div id="PostComment">
-            <button>
-                <img src="/icons/send_FILL0_wght400_GRAD0_opsz48.png"/>
+            <button id="SendComment">
+                <img id="SendCommentImg" src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" />
             </button>
-            <textarea aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft"></textarea>
+            <textarea id="TextComment" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft"></textarea>
         </div>
         <div id="PostReactions">
             <button id="Sad">
