--- a/MoonBookWeb/wwwroot/tmpl/freands.html
+++ b/MoonBookWeb/wwwroot/tmpl/freands.html
@@ -1,4 +1,5 @@
 ﻿<div class="idFreand" id="{{id}}">
+    <div id="OnlineUser" style="position: absolute; margin: 1.4%; {{Online}}"></div>
     <img id="FreandPhoto" src="/img/{{PhotoName}}">
     <p id="FreandName">
         <b>{{Name}} {{Surname}}</b>
