--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -6,6 +6,7 @@
                 <b>{{Name}} {{Surname}}</b><br />
                 <i>{{Date}}</i>
             </p>
+            <img id="PostDelete" src="../icons/delete_FILL0_wght400_GRAD0_opsz48.png"/>
         </div>
         <div>
             <p id="PostTitle"><b>{{Title}}</b></p>
