--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -11,7 +11,7 @@
         <div>
             <p id="PostTitle"><b>{{Title}}</b></p>
             {{PostImg}}
-            <p>{{Text}}</p>
+            <p id="PostText">{{Text}}</p>
         </div>
         <comments id="Comment">{{Comments}}</comments>
         <div id="PostComment">
