--- a/MoonBookWeb/wwwroot/tmpl/userbooks.html
+++ b/MoonBookWeb/wwwroot/tmpl/userbooks.html
@@ -1,3 +1,3 @@
-﻿<div class="Book" id="{{id}}">
+﻿<div class="Book" title="{{Author}} &ldquo;{{Title}}&rdquo;" id="{{id}}">
     <img id="UserBookImg" src="/img_post/{{CoverName}}"/>
 </div>
