--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -7,11 +7,12 @@
                 <i>{{Date}}</i>
             </p>
             <img id="PostDelete" src="../icons/delete_FILL0_wght400_GRAD0_opsz48.png"/>
+            <img id="PostUpdate" src="../icons/drive_file_rename_outline_FILL0_wght400_GRAD0_opsz48.png"/>
         </div>
         <div>
             <p id="PostTitle"><b>{{Title}}</b></p>
             {{PostImg}}
-            <p id="PostText">{{Text}}</p>
+            <p class="PostText" id="PostText">{{Text}}</p>
         </div>
         <comments id="Comment">{{Comments}}</comments>
         <div id="PostComment">
