--- a/MoonBookWeb/wwwroot/tmpl/book.html
+++ b/MoonBookWeb/wwwroot/tmpl/book.html
@@ -1,4 +1,4 @@
-﻿<div class="Books" id="{{Id}}">
+﻿<div class="Books" id="{{id}}">
     <img id="CoverName" src="../img_post/{{CoverName}}" />
     <p id="Title">{{Title}}</p>
     <p id="Author">{{Author}}</p>
