--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -6,8 +6,8 @@
                 <b>{{Name}} {{Surname}}</b><br />
                 <i>{{Date}}</i>
             </p>
-            <img id="PostDelete" src="../icons/delete_FILL0_wght400_GRAD0_opsz48.png"/>
-            <img id="PostUpdate" src="../icons/drive_file_rename_outline_FILL0_wght400_GRAD0_opsz48.png"/>
+            {{PostDelete}}
+            {{PostUpdate}}
         </div>
         <div>
             <p id="PostTitle"><b>{{Title}}</b></p>
