--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -3,7 +3,7 @@
         <div id="PostInfo">
             <img id="PostUserPhoto" src="/img/{{PhotoUser}}">
             <p id="PostUserName">
-                <b>{{Name}} {{Surname}}</b><br />
+                <a href="../User/FreandPage?{{Login}}"><b>{{Name}} {{Surname}}</b></a><br>
                 <i>{{Date}}</i>
             </p>
             {{PostDelete}}
