--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -15,6 +15,11 @@
             <p class="PostText" id="PostText">{{Text}}</p>
         </div>
         <comments id="Comment">{{Comments}}</comments>
+        <div id="CommentAnswerVeiw">
+            <img id="AnswerComment" src="../icons/subdirectory_arrow_right_FILL0_wght400_GRAD0_opsz48.png" />
+            <a id="AnserUser"><p></p></a>
+            <img id="CloseAnswer" src="../icons/close_FILL0_wght400_GRAD0_opsz48.png" />
+        </div>
         <div id="PostComment">
             <button id="SendComment">
                 <img id="SendCommentImg" src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" />
