--- a/MoonBookWeb/wwwroot/tmpl/post.html
+++ b/MoonBookWeb/wwwroot/tmpl/post.html
@@ -24,7 +24,7 @@
             <button id="SendComment">
                 <img id="SendCommentImg" src="/icons/send_FILL0_wght400_GRAD0_opsz48.png" />
             </button>
-            <textarea id="TextComment" aria-disabled="false" spellcheck="true" autocomplete="on" autocorrect="on" autocapitalize="on" contenteditable="true" name="BlokMessege" cols="4" wrap="soft"></textarea>
+            <div id="TextComment" contenteditable="true"></div>
         </div>
         <div id="PostReactions">
             <button id="Sad">
