--- a/MoonBookWeb/wwwroot/tmpl/book.html
+++ b/MoonBookWeb/wwwroot/tmpl/book.html
@@ -2,4 +2,9 @@
     <img id="CoverName" src="../img_post/{{CoverName}}" />
     <p id="Title">{{Title}}</p>
     <p id="Author">{{Author}}</p>
+    <div class="Star">
+        <img src="../icons/grade_FILL0_wght400_GRAD0_opsz48.png"/>
+        <p>{{Star}}</p>
+    </div>
+    
 </div>
